--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,12 @@
     margin-left: 20px;
 }
 
-.errors-container {
-    height: 20px;
-    margin-top: 5px;
-}
-
 .results-container {
     height: 30px;
     margin-top: 5px;
 }
 
-.errors-container p, .results-container p {
+.results-container p {
     margin-block-end: 0px;
     margin-block-start: 0px;
 }
